--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,11 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "https://todlicherteddy.github.io/aeon-glossary/",
+            "repo": "https://github.com/TodlicherTeddy/aeon-glossary.git"
+          }
         }
       }
     }
