--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ yarn-error.log
 
 # Visual Studio Code
 .vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
@@ -43,4 +44,4 @@ Thumbs.db
 
 /RulesTableConverter/Aeon\ Glossary.xlsx
 /RulesTableConverter/rules.json
-/docs/*
+/docs/
